test/expected/explain_hb.out
explain short bool x
              ^
15: error: "short _Bool" is illegal for built-in type
